Start getting rid of the "java9" profiles in the build since we require java11 now