@@ -136,7 +136,7 @@ public class ToolSpec {
             String handlerClz = doc.getDocumentElement().getAttribute("handler");
 
             try {
-                handler = (Tool)Class.forName(handlerClz).newInstance();
+                handler = (Tool)Class.forName(handlerClz).getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 Message message = new Message("FAIL_TO_INSTANTIATE_HANDLER", LOG, handlerClz);
                 throw new ToolException(message, ex);
